create all adapters and activities
Signed-off-by: Arnav Gupta <arnav@codingblocks.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.UsersActivity" />
+        <activity android:name=".activities.PostsActivity" />
+        <activity android:name=".activities.CommentsActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PostsActivity"></activity>
+        <activity android:name=".activities.TodosActivity"></activity>
     </application>
 
 </manifest>
