--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.TodosActivity"></activity>
+        <activity android:name=".activities.TodosActivity" />
+        <activity android:name=".activities.AlbumsActivity" />
+        <activity android:name=".activities.PhotosListActivity" />
+        <activity android:name=".activities.PhotoViewActivity"></activity>
     </application>
 
 </manifest>
