--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         <activity android:name=".activities.UsersActivity" />
         <activity android:name=".activities.PostsActivity" />
         <activity android:name=".activities.CommentsActivity" />
+        <activity android:name=".activities.AlbumActivity"/>
+        <activity android:name=".activities.PhotosActivity"/>
+        <activity android:name=".activities.ViewPhotoActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
