--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".activities.UsersActivity" />
         <activity android:name=".activities.PostsActivity" />
         <activity android:name=".activities.CommentsActivity" />
+        <activity android:name=".activities.AlbumsActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.TodosActivity"></activity>
+        <activity android:name=".activities.PhotosListActivity" />
+        <activity android:name=".activities.TodosActivity" />
+        <activity android:name=".activities.ImageViewActivity"></activity>
     </application>
 
 </manifest>
