Albums Activity Added

--- a/AndroidSample_Retrofit_RESTAPI/app/src/main/AndroidManifest.xml
+++ b/AndroidSample_Retrofit_RESTAPI/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.TodosActivity" />
-        <activity android:name=".AlbumsActivity" />
+        <activity android:name=".activities.AlbumsActivity" />
         <activity android:name=".activities.PhotosActivity"></activity>
     </application>
 
