--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity android:name=".activities.TodosActivity" />
         <activity android:name=".activities.AlbumsActivity" />
-        <activity android:name=".activities.PhotosActivity"></activity>
+        <activity android:name=".activities.PhotosActivity" />
+        <activity android:name=".activities.PicActivity"></activity>
     </application>
 
 </manifest>
