add activities stubs
Signed-off-by: Arnav Gupta <arnav@codingblocks.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.UsersActivity" />
+        <activity android:name=".activities.CommentsActivity" />
+        <activity android:name=".activities.PostsActivity" />
+        <activity android:name=".activities.AlbumsActivity" />
+        <activity android:name=".activities.TodosActivity" />
+        <activity android:name=".activities.PhotosActivity"></activity>
     </application>
 
 </manifest>
